Ready for deployment - MongoDB Atlas connected

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://127.0.0.1:27017/authentication
+MONGO_URI=mongodb+srv://inbasrees05_db_user:K0anBYFIFzE1gkFQ@event.sipjahx.mongodb.net/event
 PORT=3000
 JWT_SECRET=jwttokenkey
 VITE_GOOGLE_CLIENT_ID=679651761392-is6mcja5686euhocbcb4p5ppd9gqql2i.apps.googleusercontent.com
